Adds react portal for the modal

--- a/package.json
+++ b/package.json
@@ -60,10 +60,11 @@
     "lodash.groupby": "^4.6.0",
     "moment": "^2.19.2",
     "prop-types": "^15.6.0",
-    "react": "^16.0.0",
+    "react": "^16.1.1",
     "react-addons-css-transition-group": "^15.6.2",
-    "react-dom": "^16.0.0",
+    "react-dom": "^16.1.1",
     "react-markdown": "^2.5.0",
+    "react-portal": "^4.0.0",
     "react-redux": "^4.0.0",
     "react-responsive": "^2.0.0",
     "react-router-dom": "^4.1.1",
